minor alignment fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -117,9 +117,10 @@ span {
 .endgameButtons {
   display: flex;
   justify-content: center;
+  align-items: center;
   color: white;
   text-shadow: 5px 5px rgba(0, 0, 0, 0.5);
-  font-size: 30px;
+  font-size: 50px;
   background-color: rgba(7, 95, 126, 0.9);
   border: 5px solid rgb(121, 34, 34);
   width: 400px;
